# go-vulnfixes-db

./: .env.tmpl  .gitignore  .prettierignore  .pylintrc  .style.yapf  README.md  populate_all_cve_views.sh  pyproject.toml  requirements.in  requirements.txt  todo.md
data/: all_cwe_to_cveinfo_index.json  all_govulndb_index.json  cwe_699_info_enriched.csv  filechange_fetch_issues.md  functional_areas.md  go_unique_CWE_descripton.md
data/cwe-699/: 699_categories.csv  699_info_category_enriched.csv  cwe_functional_areas.json  cwe_top10_cisa_kev.json  cwe_top25_2023.json  cwe_top25_2023_stubborn.json
data/go-cves/: CVE-2011-1021.json  CVE-2013-10005.json  CVE-2014-125026.json  CVE-2014-125064.json  CVE-2014-7189.json  CVE-2014-8681.json  CVE-2014-8682.json  CVE-2015-10004.json  CVE-2015-1340.json  CVE-2015-2318.json  CVE-2015-5305.json  CVE-2015-5739.json  CVE-2015-5740.json  CVE-2015-5741.json  CVE-2015-8618.json  CVE-2016-15005.json  CVE-2016-3697.json  CVE-2016-3958.json  CVE-2016-3959.json  CVE-2016-5386.json  CVE-2016-9121.json  CVE-2016-9122.json  CVE-2016-9123.json  CVE-2017-1000097.json  CVE-2017-1000098.json  CVE-2017-11468.json  CVE-2017-11480.json  CVE-2017-15041.json  CVE-2017-15042.json  CVE-2017-15133.json  CVE-2017-17831.json  CVE-2017-18367.json  CVE-2017-20146.json  CVE-2017-3204.json  CVE-2017-8932.json  CVE-2018-1000538.json  (+571 more)
src/: __process_cvefixes_and_govulndb.py  cwe_categorization.py  cwe_info_dict.py  process_cvefixes_only.py  process_cves.py  process_filechanges.py  process_govulndb_only.py  process_nvddb.py  validate_osv.py  xml_to_json.py
(+700 files in other folders)
